<resources>
    <string name="app_name">HelloWorld</string>
    <string name="action_settings">Settings</string>
    <string name="masa">Masa w kg</string>
    <string name="wzrost">Wzrost w m</string>
    <string name="policz">Policz</string>
    <string name="wynik">BMI</string>
    <string name="kalorie">Ilosc kalori</string>
    <string name="liczenie">Policz kalorie</string>
    <string name="mezczyzna">Mezczyzna</string>
    <string name="kobieta">Kobieta</string>
    <string name="rozsadek">Rozsadek</string>
    <string name="wiek">Wiek w latach</string>
    <string name="wykresy">Wykresy</string>
    <string name="quiz">Quiz</string>
    <string name="title_activity_chart">Chart</string>
    <string name="pytanie">Czym można leczyc wirusa?</string>
    <string name="wroc">Wroc</string>
    <string name="odp1">odp1</string>
    <string name="odp2">odp2</string>
    <string name="odp3">odp3</string>
    <string name="odp4">odp4</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
